1.txt
/home/user/BookCatalog/editbookdialog.cpp:40: ошибка: ‘QLineEdit* QAbstractSpinBox::lineEdit() const’ is protected within this context
/home/user/BookCatalog/editbookdialog.cpp: In member function ‘void EditBookDialog::setupUi()’:
/home/user/BookCatalog/editbookdialog.cpp:40:34: error: ‘QLineEdit* QAbstractSpinBox::lineEdit() const’ is protected within this context
   40 |     if (publishDateEdit->lineEdit()) { // Проверяем, что lineEdit существует
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~^~
